syntax = "proto3";

package auth;

option go_package = "./backend/auth";

service Authentication {
  rpc Signup(SignupRequest) returns (SignupResponse) {};
  rpc Signin(SigninRequest) returns (SigninResponse) {};
}

message SignupRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignupResponse {
  string user_id = 1;
  string token_type = 2;
  string access_token = 3;
  string refresh_token = 4;
  int64 expires_in = 5;
  string scope = 6;
}

message SigninRequest {
  string email = 1;
  string password = 2;
}

message SigninResponse {
  string user_id = 1;
  string token_type = 2;
  string access_token = 3;
  string refresh_token = 4;
  int64 expires_in = 5;
  string scope = 6;
};
